--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ enable-magisk-update = true
 parallel-jobs = 1
 
 [YouTube]
+enabled = false
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 patches-source = "inotia00/revanced-patches"
 rv-brand = "ReVanced Extended"
@@ -11,6 +12,7 @@ included-patches = "'MaterialYou'"
 excluded-patches = "'Custom branding icon for YouTube' 'Custom branding name for YouTube' 'Theme'"
 
 [Youtube-Music]
+enabled = false
 app-name = "Youtube Music"
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
 patches-source = "inotia00/revanced-patches"
