--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
         run: |
           cd build || { echo "build folder not found"; exit 1; }
 
-          TG_CHAT="@schoolbustesting"
+          TG_CHAT="@schoolbusrvmm"
           NL=$'\n'
           APKS=""
           MODULES=""
@@ -130,12 +130,12 @@ jobs:
           APKS=${APKS#"$NL"}
 
           BODY="$(sed 's/^\* \*\*/↪ \*\*/g; s/^\* `/↪ \*\*/g; s/`/\*/g; s/^\* /\↪/g; s/\*\*/\*/g; s/###//g; s/^- /↪ /g; /^==/d;' ../build.md)"
-          MSG="*New build available.*
+          MSG="*_New build available._*
 
           ${BODY}
           
-          *Check for updates in Magisk/KSU(N).*
-          *Or download:*
+          Check for updates in Magisk/KSU(N).
+          Or download:
           
           Modules
           ${MODULES}
