--- a/config.toml
+++ b/config.toml
@@ -24,4 +24,5 @@ apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit/"
 patches-source = "inotia00/revanced-patches"
 rv-brand = "ReVanced Extended"
 arch = "both"
+dpi = "120-640dpi"
 build-mode = "module"
