--- a/config.toml
+++ b/config.toml
@@ -23,5 +23,5 @@ excluded-patches = "'Custom branding icon for YouTube Music' 'Custom branding na
 apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit/"
 patches-source = "inotia00/revanced-patches"
 rv-brand = "ReVanced Extended"
-dpi = "120-640"
+dpi = "120-640dpi"
 build-mode = "module"
