--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,7 +134,7 @@ jobs:
 
           ${BODY}
           
-          Check for updates in Magisk/KSU(N).
+          Check for updates in Magisk/KSU.
           Or download:
           
           Modules
