--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           body: ${{ steps.get_output.outputs.BUILD_LOG }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./build/*
-          release_name: ReVanced Extended
+          release_name: ReVanced
           tag: ${{ steps.next_ver_code.outputs.NEXT_VER_CODE }}
           file_glob: true
           overwrite: true
@@ -134,7 +134,7 @@ jobs:
 
           ${BODY}
           
-          Check for updates in Magisk/KSU(N).
+          Check for updates in Magisk/KSU.
           Or download:
           
           Modules
