--- a/config.toml
+++ b/config.toml
@@ -24,3 +24,4 @@ app-name = "Spotify"
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 build-mode = "module"
+included-patches = "'Predictive back gesture' 'Spoof SIM country' 'Hide mock location' 'Spoof Wi-Fi connection' 'Hide ADB status' 'Remove screenshot restriction' 'Remove screen capture restriction' 'Disable Pairip license check'"
